src/runtime/snapshots/nox__runtime__tests__errors__add_int_string.snap
---
source: src/runtime/tests.rs
expression: vm.run().unwrap_err()
---
[1;31merror[0m pos 11 :
invalid binary operation '+' between 5 and "hello"

