src/runtime/snapshots/nox__runtime__tests__errors__int_is_not_a_function.snap
---
source: src/runtime/tests.rs
expression: vm.run().unwrap_err()

---
[1;31merror[0m line 1:
5 is not a function

