src/runtime/snapshots/nox__runtime__tests__errors__nil_is_not_a_table.snap
---
source: src/runtime/tests.rs
expression: vm.run().unwrap_err()
---
[1;31merror[0m pos 6 :
nil is not a table

