src/runtime/snapshots/nox__runtime__tests__errors__power_nil_float.snap
---
source: src/runtime/tests.rs
expression: vm.run().unwrap_err()
---
[1;31merror[0m pos 13 :
invalid binary operation '^' between nil and 5.2

