src/runtime/snapshots/nox__runtime__tests__errors__sub_table_function.snap
---
source: src/runtime/tests.rs
expression: vm.run().unwrap_err()

---
[1;31merror[0m line 1:
invalid binary operation '-' between <table> and <function>

